--- a/algorithms/warmup/solve_me_first/CMakeLists.txt
+++ b/algorithms/warmup/solve_me_first/CMakeLists.txt
@@ -3,6 +3,5 @@ project(hacker_rank)
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
 
-set(SOURCE_FILES main.c add.c)
+set(SOURCE_FILES main.c)
 add_executable(solve_me_first ${SOURCE_FILES})
-
