--- a/algorithms/warmup/CMakeLists.txt
+++ b/algorithms/warmup/CMakeLists.txt
@@ -1,4 +1,4 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(hacker_rank)
 
-add_subdirectory(solve_me_first)
+add_executable(solve_me_first solve_me_first.c)
