--- a/algorithms/warmup/CMakeLists.txt
+++ b/algorithms/warmup/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(hacker_rank)
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=c99")
+
 add_executable(solve_me_first solve_me_first.c)
+add_executable(lonely_integer lonely_integer.c)
