--- a/algorithms/warmup/CMakeLists.txt
+++ b/algorithms/warmup/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(solve_me_first solve_me_first.c)
 add_executable(lonely_integer lonely_integer.c)
 add_executable(flipping_bits flipping_bits.c)
 add_executable(maximizing_xor maximizing_xor.c)
+add_executable(utopian_tree utopian_tree.c)
